<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/box_one"
            style="@style/white_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/box_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/box_two"
            style="@style/white_box"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/box_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_one" />

        <TextView
            android:id="@+id/box_three"
            style="@style/white_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="16dp"
            android:text="@string/box_three"
            app:layout_constraintBottom_toTopOf="@id/box_four"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            app:layout_constraintTop_toTopOf="@+id/box_two" />

        <TextView
            android:id="@+id/box_four"
            style="@style/white_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/box_four"
            app:layout_constraintBottom_toTopOf="@id/box_five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            app:layout_constraintTop_toBottomOf="@+id/box_three" />

        <TextView
            android:id="@+id/box_five"
            style="@style/white_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_five"
            app:layout_constraintBottom_toBottomOf="@+id/box_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            app:layout_constraintTop_toBottomOf="@+id/box_four" />

        <TextView
            android:id="@+id/what_is_your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bangers"
            android:text="What's your name"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_two"
            app:layout_constraintVertical_bias="0.427" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bangers"

            android:text="Avilash"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/what_is_your_name"
            app:layout_constraintTop_toBottomOf="@+id/box_five"
            app:layout_constraintVertical_bias="0.064" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_one"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="633dp"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_two"/>

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="0.87"
            tools:layout_editor_absoluteX="171dp" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_three"
            tools:layout_editor_absoluteX="305dp"
            tools:layout_editor_absoluteY="633dp"
            app:layout_constraintBaseline_toBaselineOf="@id/btn_two"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>